url jump fix 2

--- a/src/custom-bootstrap.scss
+++ b/src/custom-bootstrap.scss
@@ -30,7 +30,7 @@ body {
   color:       $color-text !important;
   font-family: 'Roboto', sans-serif;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch; /* For iOS smoothness */
+  // -webkit-overflow-scrolling: touch; /* For iOS smoothness */
 
 }
 
